first section done

--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Document</title>
+    <!-- css link  -->
+    <link rel="stylesheet" href="style.css">
+    <!-- font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Yeseva+One&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section class="first-section">
+        <div class="half-width">
+            <h1>
+                Stay Focused on</h1>
+            <h1 class="heading-color">Mission 2022 </h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal
+                noluisse, enim</p>
+            <a href="">Explore Now</a>
+            <p>Scroll down to explore more about us</p>
+        </div>
+        <div class="half-width">
+            <img src="images/person/person-0.png" alt="" width="60%">
+        </div>
+    </section>
+    <section>
+        <h2>My Mission <span class="heading-color">in 2022</span></h2>
+    </section>
     
 </body>
 </html>
