--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span class="heading-color">Mission 2022 </span></h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal
                 noluisse, enim</p>
-            <a href="">Explore Now</a>
+            <a target="_blank" href="https://web.programming-hero.com/">Explore Now</a>
             <p>Scroll down to explore more about us</p>
         </div>
         <div class="half-width">
@@ -70,7 +70,7 @@
                 <p>Development Without Limits works at the intersection of professional learning, positive youth development and
                     strategy. We help organizational leaders like you re-focus your resources to keep your amazing people doing great
                     work.</p>
-                <a href="">Read the documentation</a>
+                <a target="_blank" href="https://web.programming-hero.com/">Read the documentation</a>
                 </div>
                 </section>
                 <!-- global community section start  -->
@@ -104,7 +104,7 @@
                             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
                                 animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit,
                                 affert gubergren dissentias et cum.</p>
-                            <a href="">App Fetures</a>
+                            <a target="_blank" href="https://web.programming-hero.com/">App Fetures</a>
                         </div>
                     </div>
                 </section>
@@ -128,8 +128,7 @@
                             <img src="images/person/cookie.png" alt="" width="50%">
                             <h4>No Cookie-Cutter Solutions</h4>
                             <p>Our expert Web Developers build, utilize, integrate, and customize the right tools, technologies, and
-                                frameworks to accomplish the goals that you’ve set forth. Whether you require Data Integration Services,
-                                Enterprise Application Integrations.</p>
+                                frameworks to accomplish the goals that you’ve set forth. Whether you require Data Integration Services.</p>
                         </div>
                         <div class="solution-area-element" class="mission-area-element">
                             <img src="images//person/images.png"" width=" 60%">
