--- a/index.html
+++ b/index.html
@@ -101,9 +101,12 @@
                         </div>
                         <div>
                             <h2>Stay safe with <br> <span class="heading-color">GoCorona.</span></h2>
-                            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                                animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit,
-                                affert gubergren dissentias et cum.</p>
+                            <p>The risks of getting COVID-19 are higher in crowded and inadequately ventilated spaces where infected people spend
+                                long periods of time together in close proximity.
+                            
+                                Outbreaks have been reported in places where people have gather, often in crowded indoor settings and where they
+                                talk loudly, shout, breathe heavily or sing such as restaurants, choir practices, fitness classes, nightclubs,
+                                offices and places of worship.</p>
                             <a target="_blank" href="https://web.programming-hero.com/">App Fetures</a>
                         </div>
                     </div>
