--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <h1>
                 Stay Focused on <br>
                 <span class="heading-color">Mission 2022 </span></h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal
-                noluisse, enim</p>
+            <p>StayFocusd increases your productivity by limiting the amount of time that you can spend on time-wasting websites.
+            </p>
             <a target="_blank" href="https://web.programming-hero.com/">Explore Now</a>
             <p>Scroll down to explore more about us</p>
         </div>
